--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 	<input type="text" placeholder="Name" id="name">
 	<input type="text" placeholder="Location" id="waypoint">
 	<input type="text" placeholder="Radius" id="radius">
+	<div id="checkbox"></div>
 <button id="submit">Submit</button>
+<button id="test">Test</button>
+
 </form>
 <script src="assets/javascript/app.js"></script>
 </body>
