--- a/firstpage.html
+++ b/firstpage.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 	<h1>Move-In Concerige</h1>
-	<h2> Let's Get You Started!</h2>
+	<h2>Let's Get You Started!</h2>
 </header>
 <form>
 	<input type="text" placeholder="Street Address" id="streetAddress">
@@ -18,6 +18,7 @@
   <input type="text" placeholder="Zip" id="zip">
 
 <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#myModal">Click to Start</button>
+</form>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
@@ -29,8 +30,7 @@ $("#zip").val("");
 
 
 
-var reason = $(this).attr("id")
-console.log(reason);
+
 
 
 </script>
